<resources>
    <string name="app_name">AppListaCurso</string>
    <string name="nome_aplicativo">Aplicativo Lista VIP Curso Android</string>
    <string name="primeiro_nome">Primeiro Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="nome_do_curso_desejado">Nome do curso desejado</string>
    <string name="telefone_de_contato">Telefone de contato</string>
    <string name="limpar">limpar</string>
    <string name="salvar">salvar</string>
    <string name="finalizar">finalizar</string>
    <string name="selecione_um_curso">Selecione um curso...</string>
</resources>